src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-dwP0.25-dhU.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 0, bounds: 1280 × 720, states: [Activated]
